--- a/views/header.html
+++ b/views/header.html
@@ -3,7 +3,7 @@
 <div class="navbar navbar-default navbar-fixed-top">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a href="/" class="navbar-brand">
+			<a href="#/" class="navbar-brand">
 				<img src="images/serbisyo-logo.png" alt="Serbisyo.com" class="logo" />
 			</a>
 			<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
@@ -13,6 +13,9 @@
 			</button>
 		</div>
 		<div class="navbar-collapse collapse" id="navbar-main">
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="">Post free Ad</a></li>
+			</ul>
 			<ul class="nav navbar-nav" ng-show="loggedIn" ng-class="{'visible-xs': loggedIn}">
 				<li ng-class="{'active': path == '/mydashboard'}">
 					<a href="#/mydashboard">
@@ -41,38 +44,37 @@
 					<a href="">
 						<span class="glyphicon glyphicon-off"></span>
 						&nbsp;
-						Logout
+						Logout 
 					</a>
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right hidden-xs">
-				<li><a href="">Post free Ad</a></li>
 				<li class="dropdown" ng-show="loggedIn">
-					<a class="dropdown-toggle" data-toggle="dropdown" href=a"#" id="menu">
-						Bebertz 
+					<a class="dropdown-toggle" data-toggle="dropdown" href="" id="menu">
+						Pangit
 						&nbsp;
 						<img src="images/serbisyo-icons/no-profile-picture.png" alt="user-image" class="nav-image" />
-						<span class="caret"></span>
+						<i class="fa fa-angle-down fa-lg "></i>
 					</a>
 					<ul class="dropdown-menu" aria-labelledby="menu">
 						<li ng-class="{'active': path == '/mydashboard'}">
 							<a href="#/mydashboard">
-								<span class="glyphicon glyphicon-user"></span>
+								<i class="fa fa-user"></i>
 								&nbsp;
 								My Dashboard
 							</a>
 						</li>
 						<li class="divider"></li>
-						<li ng-class="{'active': path == '/settings'}">
+						<li ng-class="{'active': path == '/settings'}" ng-mouseover="settingsHover = true" ng-mouseleave="settingsHover = false">
 							<a href="#/settings">
-								<span class="glyphicon glyphicon-cog"></span>
+								<i class="fa fa-cog" ng-class="{'fa-spin': settingsHover}"></i>
 								&nbsp;
 								Settings
 							</a>
 						</li>
 						<li ng-class="{'active': path == '/multilogin'}">
 							<a href="#/multilogin">
-								<span class="glyphicon glyphicon-th-list"></span>
+								<i class="fa fa-list-ul"></i>
 								&nbsp;
 								Multi Login
 							</a>
@@ -80,7 +82,7 @@
 						<li class="divider"></li>
 						<li ng-class="{'active': path == '/logout'}" ng-click="logout()">
 							<a href="">
-								<span class="glyphicon glyphicon-off"></span>
+								<i class="fa fa-sign-out"></i>
 								&nbsp;
 								Logout
 							</a>
@@ -89,13 +91,44 @@
 				</li>
 				<li class="dropdown" ng-hide="loggedIn">
 					<a class="dropdown-toggle" data-toggle="dropdown" href="" id="login">
-						Login / Register <span class="caret"></span>
+						Sign in | Sign up
 					</a>
 					<ul class="dropdown-menu" aria-labelledby="login">
-						<li ng-click="login()"><a href="">Facebook</a></li>
-						<li ng-click="login()"><a href="">Twitter</a></li>
-						<li ng-click="login()"><a href="">Gmail</a></li>
-						<li ng-click="login()"><a href="">LinkedIn</a></li>
+						<li ng-click="login()">
+							<a href="">
+								<i class="fa fa-facebook"></i>
+								&nbsp;
+								Facebook
+							</a>
+						</li>
+						<li ng-click="login()">
+							<a href="">
+								<i class="fa fa-twitter"></i>
+								&nbsp;
+								Twitter
+							</a>
+						</li>
+						<li ng-click="login()">
+							<a href="">
+								<i class="fa fa-google"></i>
+								&nbsp;
+								Gmail
+							</a>
+						</li>
+						<li ng-click="login()">
+							<a href="">
+								<i class="fa fa-linkedin"></i>
+								&nbsp;
+								LinkedIn
+							</a>
+						</li>
+						<li ng-click="login()">
+							<a href="">
+								<i class="fa fa-yahoo"></i>
+								&nbsp;
+								Yahoo
+							</a>
+						</li>
 					</ul>
 				</li>
 			</ul>
@@ -133,7 +166,7 @@
 		<div class="col-lg-4 col-md-5 col-sm-6 col-lg-offset-8 col-md-offset-7 col-sm-offset-6">
 			<div class="form-group">
 				<div class="input-group input-group-sm">
-					<input type="search" class="form-control" ng-focus="searchInputFocus = !searchInputFocus" ng-blur="searchInputFocus = !searchInputFocus" ng-style="{background: searchInputFocus || search.key ? 'white' : ''}" ng-model="search.key" placeholder="I'm looking for..." />
+					<input type="search" class="form-control searchkey whiteframe-z0" ng-model="search.key" placeholder="I'm looking for..." />
 					<span class="input-group-btn">
 						<button class="btn btn-primary" type="button" ng-click="searchSerbisyo()">
 							&nbsp;
@@ -146,10 +179,10 @@
 					<label class="input-group-addon" for="location">
 						<span class="glyphicon glyphicon-map-marker"></span>
 					</label>
-					<input type="text" name="location" id="location" class="form-control" ng-focus="locationInputFocus = !locationInputFocus" ng-blur="locationInputFocus = !locationInputFocus" ng-model="search.location" placeholder="{{locationInputFocus ? 'Enter Philippine city or town' : 'All Philippines'}}" ng-style="{'box-shadow': search.location == 'x' ? 'inset 0 -2px 0 #e51c23' : (search.location && locationInputFocus ? 'inset 0 -2px 0 #2196f3' : '')}" typeahead="CfgCitytown as CfgCitytown.citytownName + ', ' + CfgCitytown.fkCfgStateprovinceId.stateprovinceName for CfgCitytown in lstCfgCitytown | filter:$viewValue | limitTo:30" />
+					<input type="text" name="location" id="location" class="form-control" ng-focus="locationInputFocus = !locationInputFocus" ng-blur="locationInputFocus = !locationInputFocus" ng-model="search.location" placeholder="{{locationInputFocus ? 'Enter Philippine city or town' : 'All Philippines'}}" ng-style="{'box-shadow': search.location == 'x' ? 'inset 0 -2px 0 #e51c23' : (search.location && locationInputFocus ? 'inset 0 -2px 0 #2196f3' : '')}" typeahead="CfgCitytown as CfgCitytown.citytownName for CfgCitytown in lstCfgCitytown | filter:$viewValue | limitTo:30" />
 					<div class="popover fade bottom in popup-location-error" role="tooltip" ng-style="{'opacity': search.location == 'x' ? '1': '0', 'display': locationInputFocus || search.location == 'x' ? 'block' : 'none'}">
 						<div class="arrow" style="left: 50%;"></div>
-						<div class="popover-content">Enter Philippine city or town</div>
+						<div class="popover-content">Enter Philippine city or town, province</div>
 					</div>
 				</div>
 			</div>
@@ -159,6 +192,6 @@
 
 <!-- Go to top -->
 
-<div class="container-fluid go-to-top" ng-class="{'whiteframe-z1': goTo}" ng-mouseover="goTo = true" ng-mouseout="goTo = false" ng-click="goToTop()">
+<div class="container-fluid go-to-top" ng-class="{'whiteframe-z1': goTo}" ng-mouseover="goTo = true" ng-mouseleave="goTo = false" ng-click="goToTop()">
 	<span class="glyphicon glyphicon-chevron-up"></span>
 </div>
