--- a/app/views/header.html
+++ b/app/views/header.html
@@ -89,7 +89,7 @@
 				</li>
 				<li class="dropdown" ng-hide="loggedIn">
 					<a class="dropdown-toggle" data-toggle="dropdown" href="" id="login">
-						Login / Register <span class="caret"></span>
+						Sign in | Sign up
 					</a>
 					<ul class="dropdown-menu" aria-labelledby="login">
 						<li ng-click="login()"><a href="">Facebook</a></li>
