--- a/app/views/dialogs/dialog.html
+++ b/app/views/dialogs/dialog.html
@@ -1,15 +1,19 @@
-<div class="modal-header">
-  <button type="button" class="close" aria-hidden="true" ng-click="no()">&times;</button>
-  <h4 class="modal-title">Source Code</h4>
-</div>
-<div class="modal-body">
-  Testing
-</div>
-<div class="modal-footer">
-  <button type="button" class="btn-flat btn-warning" ng-click="yes()">
-    Cancel
-  </button>
-  <button type="button" class="btn-flat btn-primary" ng-click="no()">
-    Ok
-  </button>
+<div class="serbisyo-modal">
+	<div class="serbisyo-modal-content border-radius-3 dialog-shadow-1">
+		<div class="modal-header background-color-primary white">
+			<button type="button" class="close" aria-hidden="true" ng-click="no()">&times;</button>
+			<h4 class="modal-title">Source Code</h4>
+		</div>
+		<div class="modal-body">
+			Testing
+		</div>
+		<div class="modal-footer">
+			<button type="button" class="btn-flat btn-warning btn-sm" ng-click="yes()">
+				Cancel
+			</button>
+			<button type="button" class="btn-flat btn-primary btn-sm" ng-click="no()">
+				Ok
+			</button>
+		</div>
+	</div>
 </div>
